--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.0'
 }
 
-group 'uk.co.mainwave.regextoolbox.kotlin'
+group 'uk.co.mainwave.regextoolbox'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
