--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,29 @@
-plugins {
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.0'
+buildscript {
+    ext.junit_version = '4.12'
 }
 
-group 'uk.co.mainwave.regextoolbox'
-version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
+plugins {
+    id 'java-library'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.0'
+    id 'com.palantir.git-version' version '0.11.0'
+    id 'com.jfrog.bintray' version '1.8.4'
+    id 'maven'
+    id 'maven-publish'
+}
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
+group 'uk.co.mainwave.regextoolbox'
+version gitVersion()
+
+sourceCompatibility = 1.8
+
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    testImplementation "junit:junit:$junit_version"
 }
 
 compileKotlin {
@@ -22,4 +31,20 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+bintray {
+    user = project.hasProperty('bintray_user') ? project.property('bintray_user') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintray_api_key') ? project.property('bintray_api_key') : System.getenv('BINTRAY_API_KEY')
+    configurations = ['archives']
+    publish = true
+    pkg {
+        repo = 'Maven'
+        name = 'RegexToolbox.kt'
+        version {
+            name = gitVersion()
+            desc = 'RegexToolbox for Kotlin'
+            vcsTag = gitVersion()
+        }
+    }
 }
