--- a/build.gradle
+++ b/build.gradle
@@ -40,11 +40,26 @@ bintray {
     publish = true
     pkg {
         repo = 'Maven'
-        name = 'regextoolbox-kotlin'
+        name = project.name
         version {
             name = gitVersion()
             desc = 'Regular expression tools for Kotlin developers'
             vcsTag = gitVersion()
         }
     }
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
