--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@
 aliases:
   - &setup-environment
     docker:
-      - image: circleci/openjdk:8u222-jdk
+      - image: circleci/openjdk:11.0.3-jdk-stretch
     working_directory: ~/repo
     environment: # Customize the JVM maximum heap limit
       JVM_OPTS: -Xmx3200m
